Polish test code.